# RAG-Chatbot

./: .gitignore  pyproject.toml
src/app/: main.py
src/app/core/pipeline/: chunker.py  text_splitter.py
src/app/utils/: exceptions.py
