[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-core>=1.5.0",
    "langchain-openai>=1.4.0",
    "langchain-text-splitters>=1.1.2",
]
